<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Symphony Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="title_activity_add_item">Add Timer</string>
    <string name="title_activity_edit_item">Edit Timer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="label_title">Title</string>
    <string name="label_time">Time</string>
    <string name="label_time_hours">Hours</string>
    <string name="label_time_minutes">Minutes</string>
    <string name="label_time_seconds">Seconds</string>
    <string name="label_sound">Sound</string>
    <string name="label_image">Image</string>
    <string name="label_auto_timer_disable">Auto timer disable</string>
    <string name="sound">Sound</string>
    <string name="default_sound">Default sound</string>
    <string name="unknown_sound">Unknown sound</string>
    <string name="image_selection">Image selection</string>
    <string name="image_default_content_description">Icon</string>
    <string name="clear">Clear</string>
    <string name="caption_ok">OK</string>
    <string name="caption_cancel">Cancel</string>
    <string name="caption_login">Login</string>
    <string name="caption_logout">Logout</string>
    <string name="caption_loading">Loading &#8230;</string>
    <string name="caption_saving">Saving &#8230;</string>
    <string name="caption_due_real_time">Due time : %1$s, real time : %2$s\nDifference: %3$d ms</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="action_preferences">Preferences</string>
    <string name="pref_cat_settings">Application Settings</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_summary_vibrate">Enables vibration on task completion</string>
    <string name="pref_sound_volume">Sound volume</string>
    <string name="pref_summary_sound_volume">Sound volume when timer fires</string>
    <string name="pref_logging">Logging</string>
    <string name="pref_logging_summary">Writes logs to application folder.\nClose and open the application for the
        changes to take effect
    </string>

    <string name="pref_auto_timer_disable">Automatic disable</string>
    <string name="pref_auto_timer_disable_summary">Automatic disabling after period : %s</string>
    <string name="pref_auto_timer_disable_default">0</string>

    <string name="pref_wake_before">Wake before</string>
    <string name="pref_wake_before_summary">Wake before time in case of waking issue : %s.\nWorkaround for Android 5
        bug
    </string>
    <string name="pref_wake_before_default">0</string>

    <string name="pref_vibration_amplitude">Vibration amplitude</string>
    <string name="pref_vibration_amplitude_summary">Amplitude of vibration on timer click and completion</string>
    <string name="pref_vibration_amplitude_default">-1</string>

    <string name="pref_reset_data">Reset data</string>
    <string name="pref_summary_reset_data">Removes all data, use with great care</string>
    <string name="pref_cat_interface">Interface</string>
    <string name="pref_bitmap_background">Bitmap background</string>
    <string name="pref_bitmap_background_summary">Disable for minimum resource consumption</string>
    <string name="pref_full_history_info">Full history info</string>
    <string name="pref_full_history_info_summary">Shows supplemental info on timer operation</string>
    <string name="pref_cat_local_data_management">Local data management</string>
    <string name="pref_cat_summary_local_backup">Backup to local Download folder</string>
    <string name="pref_local_backup">Local backup</string>
    <string name="pref_summary_local_backup">Backup current data to local Download folder</string>
    <string name="pref_local_restore">Local restore</string>
    <string name="pref_summary_local_restore">Restore current data from local Download folder</string>
    <string name="pref_cat_cloud_data_management">Cloud data management</string>
    <string name="pref_cloud_account_type">Account Type</string>
    <string name="pref_cloud_account_type_default">0</string>
    <string name="pref_cloud_account">Account</string>
    <string name="pref_cloud_backup">Backup</string>
    <string name="pref_summary_cloud_backup">Backup current data to cloud account</string>
    <string name="pref_cloud_restore">Restore</string>
    <string name="pref_summary_cloud_restore">Restore current data from cloud account</string>

    <string name="error_action_timer">Error during timer action: %s</string>
    <string name="error_title_not_assigned">Title not assigned</string>
    <string name="error_time_zero">Time is zero</string>
    <string name="error_playing_sound">Error playing sound : %s</string>
    <string name="error_load_local_backup">Error loading local backup</string>
    <string name="error_internet_not_available">Internet connection is not available</string>
    <string name="error_load_process_running">Load process is already running</string>
    <string name="error_backup">Error creating backup</string>
    <string name="error_restore">Error restoring backup</string>
    <string name="error_cloud_account">Cloud account error: %s</string>
    <string name="error_cloud_account_type_not_set_up">Please, set up cloud account type</string>
    <string name="error_onedrive_login">Error logging in to OneDrive: %s</string>
    <string name="error_onedrive_logout">Error logging out from OneDrive: %s</string>
    <string name="error_gdrive_login">Error logging in to Google Drive: %s</string>
    <string name="error_gdrive_logout">Error logging out from Google Drive: %s</string>

    <string name="info_load_local_backup">Local backup has been restored successfully</string>
    <string name="info_load_cloud_backup">Cloud backup has been restored successfully</string>
    <string name="action_not_allowed">This operation is not allowed</string>
    <string name="question_are_you_sure">Are you sure?</string>
    <string name="title_activity_image_selection">ImageSelectionActivity</string>
    <string name="title_activity_history">History</string>
    <string name="tab_history_list">List</string>
    <string name="tab_history_top">Top</string>
    <string name="tab_history_dynamics">Dynamics</string>
    <string name="tab_history_top_chart">Top Chart</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="notification_onedrive_backup_completed">OneDrive backup has been completed</string>
    <string name="notification_gdrive_backup_completed">Google Drive backup has been completed</string>
    <string name="notification_load_operation_error">Load operation error : %s</string>
    <string name="notification_onedrive_successfully_logged_in">Successfully logged in to OneDrive</string>
    <string name="notification_onedrive_successfully_logged_out">Successfully logged out from OneDrive</string>
    <string name="notification_gdrive_successfully_logged_in">Successfully logged in to Google Drive</string>
    <string name="notification_gdrive_successfully_logged_out">Successfully logged out from Google Drive</string>
    <string name="notification_notification_permission_granted">Notification permission granted</string>
    <string name="notification_overlay_permission_granted">Overlay permission granted</string>
    <!-- Hints -->
    <string name="hint_timer_title">Timer title</string>
    <!-- OneDrive -->
    <string name="onedrive_client_id" tools:ignore="TypographyDashes">53b9437b-4686-4200-9af4-72859d3d8b8b</string>
    <!-- Loader -->
    <string name="pref_message_last_loaded_never">Last loaded: Never</string>
    <string name="pref_message_last_loaded_format">Last loaded: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
