<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:symphonytimer="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        symphonytimer:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        symphonytimer:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_move_up"
        android:title="@string/action_move_up"
        symphonytimer:showAsAction="never"
        />
    <item
        android:id="@+id/action_move_down"
        android:title="@string/action_move_down"
        symphonytimer:showAsAction="never"
        />
</menu>