<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".AddItemActivity" >
 
<LinearLayout   
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:text="@string/label_title"
	    android:layout_margin="@dimen/activity_input_margin"
	    />

	<EditText
	    android:id="@+id/title_edit_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_input_margin"
	    android:ems="10"
	    android:inputType="textCapWords" >

	    <requestFocus android:layout_width="fill_parent" />

	</EditText>
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:text="@string/label_time"
	    android:layout_margin="@dimen/activity_input_margin"
	    />

	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_input_margin"	    
	    >

	    <TableRow android:layout_height="fill_parent" >

	       <TextView
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
  	           android:layout_weight="1"
	           android:gravity="center"
	           android:text="@string/label_time_hours"  
	        />	        
	        
	        <TextView
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
  	           android:layout_weight="1"
	           android:gravity="center"
	           android:text="@string/label_time_minutes"  
	        />

	       <TextView
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:gravity="center"
	           android:text="@string/label_time_seconds"  
	        />       	        
	    </TableRow>
	    
	    <TableRow>
	        <EditText
	    		android:id="@+id/hours_edit_text"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:gravity="center"
	    		android:maxLength="2"
	    		android:ems="10"
	    		android:inputType="number" />
	    	<EditText
	    		android:id="@+id/minutes_edit_text"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:gravity="center"
	    		android:maxLength="2"
	    		android:ems="10"
	    		android:inputType="number" />
	    	<EditText
	    		android:id="@+id/seconds_edit_text"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:gravity="center"
	    		android:maxLength="2"
	    		android:ems="10"
	    		android:inputType="number" />	    		        
	    </TableRow>	        
	</TableLayout>

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_input_margin" 
	    android:text="@string/label_sound"	    
	    />
 	<LinearLayout  
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="0dp"
	    >
		<Button
		    android:id="@+id/sound_file_button"
	    	android:layout_width="0dp"
	    	android:layout_height="60dp"
	    	android:layout_margin="@dimen/activity_input_margin"
	    	android:layout_weight="1"	    
	    	android:text="@string/default_sound"
	    	android:onClick="onSoundFileButtonClick"
	    	/>
		<ImageButton
		    android:id="@+id/clear_sound_file_button"
		    android:contentDescription="@string/clear"
		    android:layout_width="@dimen/activity_input_button_size"
	    	android:layout_height="@dimen/activity_input_button_size"
		    android:layout_margin="@dimen/activity_input_margin"
		    android:src="@android:drawable/ic_delete"	    	    
	    	android:text=""
	    	android:onClick="onClearSoundFileButtonClick"
	    	/>
		</LinearLayout>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_input_margin" 
	    android:text="@string/label_image"	    
	    />
	<LinearLayout  
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="0dp"
	    >
		<ImageButton 
		    android:id="@+id/image_file_image_button"
		    android:contentDescription="@string/image_selection"
		    android:layout_width="0dp"
		    android:layout_height="@dimen/activity_input_button_size"
		    android:layout_margin="@dimen/activity_input_margin"
		    android:layout_weight="1"		    
		    android:adjustViewBounds="false"
		    android:scaleType="fitCenter"
		    android:onClick="onImageFileImageButtonClick"
		    android:src="@drawable/btn_check_off"	    
		    />	
		<ImageButton
		    android:id="@+id/clear_image_file_button"
		    android:contentDescription="@string/clear"
		    android:layout_width="@dimen/activity_input_button_size"
	    	android:layout_height="@dimen/activity_input_button_size"
		    android:layout_margin="@dimen/activity_input_margin"
		    android:src="@android:drawable/ic_delete"	    
	    	android:text=""
	    	android:onClick="onClearImageFileButtonClick"
	    	/>    
	</LinearLayout>	
	<TableRow
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_input_margin"
	    >				    
		<Button
		    android:id="@+id/ok_button"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
  	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/caption_ok"
	        android:onClick="onCommandClick"	          
	        />
		<Button
		    android:id="@+id/cancel_button"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
  	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/caption_cancel"
	        android:onClick="onCommandClick"	        
	        />
	    </TableRow>
			
</LinearLayout>
</ScrollView>