<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/app_nav_graph"
            app:startDestination="@id/nav_main">

    <fragment
            android:id="@+id/nav_main"
            android:name="com.romanpulov.symphonytimer.fragment.MainFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_main">

        <action
                android:id="@+id/action_main_to_timer_edit"
                app:destination="@id/nav_timer_edit"
                app:enterAnim="@android:anim/slide_in_left"
                app:exitAnim="@android:anim/slide_out_right"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right"/>
        <action
                android:id="@+id/action_main_to_settings"
                app:destination="@id/nav_settings"
                app:enterAnim="@android:anim/slide_in_left"
                app:exitAnim="@android:anim/slide_out_right"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right"/>
        <action
                android:id="@+id/action_main_to_history"
                app:destination="@id/nav_history"
                app:enterAnim="@android:anim/slide_in_left"
                app:exitAnim="@android:anim/slide_out_right"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>

    <fragment
            android:id="@+id/nav_timer_edit"
            android:name="com.romanpulov.symphonytimer.fragment.TimerEditFragment"
            android:label="@string/title_activity_add_item"
            tools:layout="@layout/fragment_timer_edit">

        <argument
                android:name="editItem"
                app:argType="com.romanpulov.symphonytimer.model.DMTimerRec"
                app:nullable="true"
                android:defaultValue="@null" />
    </fragment>

    <fragment
            android:id="@+id/nav_settings"
            android:name="com.romanpulov.symphonytimer.fragment.SettingsFragment"
            android:label="@string/title_activity_settings">
    </fragment>

    <fragment
            android:id="@+id/nav_history"
            android:name="com.romanpulov.symphonytimer.fragment.HistoryFragment"
            android:label="@string/title_activity_history"
            tools:layout="@layout/fragment_history">
    </fragment>

</navigation>