<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".fragment.TimerEditFragment">

    <TextView
            android:id="@+id/title_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_title"
            android:layout_margin="@dimen/activity_input_margin"
    />

    <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            android:layout_margin="@dimen/activity_input_margin"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:hint="@string/hint_timer_title"
    />

    <TextView
            android:id="@+id/time_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
            android:text="@string/label_time"
            android:layout_margin="@dimen/activity_input_margin"
    />

    <LinearLayout
            android:id="@+id/time_text_view_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_input_margin">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_time_hours"
        />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_time_minutes"
        />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_time_seconds"
        />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/time_edit_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view_layout"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_input_margin"
            android:baselineAligned="false"
    >

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/number_picker_size"
                android:layout_weight="1"
                android:gravity="center"
        >

            <com.romanpulov.library.view.SlideNumberPicker
                    android:id="@+id/hours_number_picker"
                    android:layout_width="@dimen/number_picker_size"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    app:min="0"
                    app:max="23"
                    app:textSize="18sp"
                    app:textStyle = "bold"
                    app:textColor="@android:color/white"
                    app:frameColor="@android:color/white"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/number_picker_size"
                android:layout_weight="1"
                android:gravity="center"
        >

            <com.romanpulov.library.view.SlideNumberPicker
                    android:id="@+id/minutes_number_picker"
                    android:layout_width="@dimen/number_picker_size"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    app:min="0"
                    app:max="59"
                    app:textSize="18sp"
                    app:textStyle = "bold"
                    app:textColor="@android:color/white"
                    app:frameColor="@android:color/white"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/number_picker_size"
                android:layout_weight="1"
                android:gravity="center"
        >

            <com.romanpulov.library.view.SlideNumberPicker
                    android:id="@+id/seconds_number_picker"
                    android:layout_width="@dimen/number_picker_size"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    app:min="0"
                    app:max="59"
                    app:textSize="18sp"
                    app:textStyle = "bold"
                    app:textColor="@android:color/white"
                    app:frameColor="@android:color/white"
            />

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:id="@+id/sound_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_edit_layout"
            android:layout_margin="@dimen/activity_input_margin"
            android:text="@string/label_sound" />

    <ImageButton
            android:id="@+id/sound_file_button"
            android:contentDescription="@string/sound"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_input_button_size"
            app:layout_constraintTop_toBottomOf="@+id/sound_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/preview_sound_file_button"
            android:layout_margin="@dimen/activity_input_margin"
            android:text="@string/default_sound"
            android:onClick="onSoundFileButtonClick"
    />

    <TextView
            android:id="@+id/sound_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/sound_file_button"
            app:layout_constraintEnd_toEndOf="@+id/sound_file_button"
            app:layout_constraintTop_toTopOf="@+id/sound_file_button"
            app:layout_constraintBottom_toBottomOf="@+id/sound_file_button"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
    />

    <ImageButton
            android:id="@+id/preview_sound_file_button"
            android:contentDescription="@string/clear"
            android:layout_width="@dimen/activity_input_button_size"
            android:layout_height="@dimen/activity_input_button_size"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/sound_text_view"
            app:layout_constraintStart_toEndOf="@+id/sound_file_button"
            app:layout_constraintEnd_toStartOf="@+id/clear_sound_file_button"
            android:scaleType="fitCenter"
            android:src="@drawable/tuba"
            android:onClick="onPreviewSoundFileButtonClick"
    />
    <ImageButton
            android:id="@+id/clear_sound_file_button"
            android:contentDescription="@string/clear"
            android:layout_width="@dimen/activity_input_button_size"
            android:layout_height="@dimen/activity_input_button_size"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/sound_text_view"
            app:layout_constraintStart_toEndOf="@+id/preview_sound_file_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/ic_delete"
            android:onClick="onClearSoundFileButtonClick"
    />

    <TextView
            android:id="@+id/image_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/sound_file_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_image"
    />

    <ImageButton
            android:id="@+id/image_file_image_button"
            android:contentDescription="@string/image_selection"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_input_button_size"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/image_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear_image_file_button"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_check_off"
            android:onClick="onImageFileImageButtonClick"
    />
    <ImageButton
            android:id="@+id/clear_image_file_button"
            android:contentDescription="@string/clear"
            android:layout_width="@dimen/activity_input_button_size"
            android:layout_height="@dimen/activity_input_button_size"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/image_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/ic_delete"
            android:onClick="onClearImageFileButtonClick"
    />

    <TextView
            android:id="@+id/auto_timer_disable_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_input_margin"
            app:layout_constraintTop_toBottomOf="@+id/image_file_image_button"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_auto_timer_disable"
    />
    <Spinner
            android:id="@+id/auto_timer_disable_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/auto_timer_disable_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/activity_input_margin"
    />

    <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/ok"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
